Update release notes, tests