@@ -1,6 +1,7 @@
 #!/bin/sh
 
-java -Xmx48m -server\
+java -Xmx64m -server\
+ -XX:-PrintGC -XX:-PrintGCDetails \
  -cp lib/junit/junit-3.8.1.jar\
 :lib/repackaged/\*:lib/xml/\*\
 :build/classes/core:build/classes/mapper:build/classes/xc:build/classes/extra\
